--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
         "axios": "~0.21.4",
         "bcryptjs": "~2.4.3",
         "bootstrap": "5.1.3",
-        "bree": "~6.3.1",
+        "bree": "^7.1.0",
         "chardet": "^1.3.0",
         "chart.js": "~3.6.0",
         "chartjs-adapter-dayjs": "~1.0.0",
