--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
         "postcss-scss": "~4.0.2",
         "prom-client": "~13.2.0",
         "prometheus-api-metrics": "~3.2.0",
-        "qrcode": "~1.4.4",
+        "qrcode": "^1.5.0",
         "redbean-node": "0.1.3",
         "socket.io": "~4.2.0",
         "socket.io-client": "~4.2.0",
