some minor features and fixes for ansible role

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -6,9 +6,14 @@
       - name: docker
     docker_compose_version: "v2.0.1"
 
+  tasks:
+    - name: Ensure {{inventory_hostname}} is set as hostname
+      hostname:
+        name: "{{inventory_hostname}}"
+      tags: ["hostname"]
+
   roles:
     - {role: geerlingguy.docker,      tags: ["docker"]}
     - {role: geerlingguy.pip,         tags: ["docker"]}
-    - {role: kuma,                    tags: ["kuma"]}
+    - {role: uptime-kuma,                    tags: ["kuma"]}
     - {role: nginx,                   tags: ["nginx"]}
-
