--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@popperjs/core": "~2.10.2",
         "args-parser": "~1.3.0",
         "axios": "~0.21.4",
+        "badge-maker": "^3.3.1",
         "bcryptjs": "~2.4.3",
         "bootstrap": "5.1.3",
         "bree": "~7.1.0",
@@ -69,6 +70,7 @@
         "chart.js": "~3.6.0",
         "chartjs-adapter-dayjs": "~1.0.0",
         "check-password-strength": "^2.0.3",
+        "chroma-js": "^2.1.2",
         "command-exists": "~1.2.9",
         "compare-versions": "~3.6.0",
         "dayjs": "~1.10.7",
