--- a/ansible/roles/nginx/templates/nginx.conf
+++ b/ansible/roles/nginx/templates/nginx.conf
@@ -67,8 +67,8 @@ http {
         server_name     {{ kuma_domain }};
         listen          443 ssl http2 default_server;
 
-        access_log      /var/log/nginx/{{ kuma_domain }}.access.log main;
-        error_log       /var/log/nginx/{{ kuma_domain }}.error.log;
+        access_log      /var/log/nginx/{{ kuma_domain }}/access.log main;
+        error_log       /var/log/nginx/{{ kuma_domain }}/error.log;
 
         location / {
             # rewrite ^/(.*)/$ /$1 permanent;
