--- a/.github/workflows/stale-bot.yml
+++ b/.github/workflows/stale-bot.yml
@@ -15,8 +15,8 @@ jobs:
           close-issue-message: 'This issue was closed because it has been stalled for 7 days with no activity.'
           close-pr-message: 'This PR was closed because it has been stalled for 7 days with no activity.'
           days-before-stale: 180
-          days-before-close: 7
+          days-before-close: 0
           exempt-issue-labels: 'News,Medium,High,discussion,bug,doc,'
-          exempt-pr-labels: 'awaiting-approval,work-in-progress,enhancement,'
+          exempt-pr-labels: 'awaiting-approval,work-in-progress,enhancement,feature-request'
           exempt-issue-assignees: 'louislam'
           exempt-pr-assignees: 'louislam'
