--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
         "simple-dns-server": "node extra/simple-dns-server.js",
         "update-language-files-with-base-lang": "cd extra/update-language-files && node index.js %npm_config_base_lang% && eslint ../../src/languages/**.js --fix",
         "update-language-files": "cd extra/update-language-files && node index.js && eslint ../../src/languages/**.js --fix",
-        "ncu-patch": "ncu -u -t patch",
-        "release-beta": "cross-env-shell node extra/beta/update-version.js && npm run build && docker buildx build -f docker/dockerfile --platform linux/amd64,linux/arm64,linux/arm/v7 -t louislam/uptime-kuma:$VERSION . --push &&  node extra/press-any-key.js && npm run upload-artifacts&& node extra/beta/reset-version.js"
+        "ncu-patch": "npm-check-updates -u -t patch",
+        "release-beta": "node extra/beta/update-version.js && npm run build && node ./extra/env2arg.js docker buildx build -f docker/dockerfile --platform linux/amd64,linux/arm64,linux/arm/v7 -t louislam/uptime-kuma:$VERSION .  --target release --push && node ./extra/press-any-key.js && npm run upload-artifacts && npm run reset-version",
+        "git-remove-tag": "git tag -d",
+        "reset-version": "node extra/beta/reset-version.js"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "~1.2.36",
@@ -62,22 +64,22 @@
         "@louislam/sqlite3": "~6.0.1",
         "@popperjs/core": "~2.10.2",
         "args-parser": "~1.3.0",
-        "axios": "~0.26.0",
+        "axios": "~0.26.1",
         "bcryptjs": "~2.4.3",
         "bootstrap": "5.1.3",
-        "bree": "~7.1.0",
+        "bree": "~7.1.5",
         "chardet": "^1.3.0",
-        "chart.js": "~3.6.0",
+        "chart.js": "~3.6.2",
         "chartjs-adapter-dayjs": "~1.0.0",
         "check-password-strength": "^2.0.5",
         "command-exists": "~1.2.9",
         "compare-versions": "~3.6.0",
-        "dayjs": "~1.10.7",
-        "express": "~4.17.1",
-        "express-basic-auth": "~1.2.0",
+        "dayjs": "~1.10.8",
+        "express": "~4.17.3",
+        "express-basic-auth": "~1.2.1",
         "favico.js": "^0.3.10",
         "form-data": "~4.0.0",
-        "http-graceful-shutdown": "~3.1.5",
+        "http-graceful-shutdown": "~3.1.7",
         "iconv-lite": "^0.6.3",
         "jsonwebtoken": "~8.5.1",
         "jwt-decode": "^3.1.2",
@@ -86,9 +88,9 @@
         "notp": "~2.0.3",
         "password-hash": "~1.2.2",
         "postcss-rtlcss": "~3.4.1",
-        "postcss-scss": "~4.0.2",
+        "postcss-scss": "~4.0.3",
         "prom-client": "~13.2.0",
-        "prometheus-api-metrics": "~3.2.0",
+        "prometheus-api-metrics": "~3.2.1",
         "qrcode": "~1.5.0",
         "redbean-node": "0.1.3",
         "socket.io": "~4.4.1",
@@ -106,7 +108,7 @@
         "vue-image-crop-upload": "~3.0.3",
         "vue-multiselect": "~3.0.0-alpha.2",
         "vue-qrcode": "~1.0.0",
-        "vue-router": "~4.0.12",
+        "vue-router": "~4.0.14",
         "vue-toastification": "~2.0.0-rc.5",
         "vuedraggable": "~4.1.0"
     },
@@ -114,10 +116,10 @@
         "@actions/github": "~5.0.0",
         "@babel/eslint-parser": "~7.15.8",
         "@babel/preset-env": "^7.15.8",
-        "@types/bootstrap": "~5.1.6",
-        "@vitejs/plugin-legacy": "~1.6.3",
+        "@types/bootstrap": "~5.1.9",
+        "@vitejs/plugin-legacy": "~1.6.4",
         "@vitejs/plugin-vue": "~1.9.4",
-        "@vue/compiler-sfc": "~3.2.22",
+        "@vue/compiler-sfc": "~3.2.31",
         "babel-plugin-rewire": "~1.2.0",
         "core-js": "~3.18.3",
         "cross-env": "~7.0.3",
@@ -125,7 +127,8 @@
         "eslint": "~7.32.0",
         "eslint-plugin-vue": "~7.18.0",
         "jest": "~27.2.5",
-        "jest-puppeteer": "~6.0.0",
+        "jest-puppeteer": "~6.0.3",
+        "npm-check-updates": "^12.5.4",
         "puppeteer": "~13.1.3",
         "sass": "~1.42.1",
         "stylelint": "~14.2.0",
