update duration cal

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "jwt-decode": "^3.1.2",
         "limiter": "^2.1.0",
         "moment": "^2.29.1",
+        "moment-duration-format": "^2.3.2",
         "nodemailer": "~6.6.5",
         "notp": "~2.0.3",
         "password-hash": "~1.2.2",
