--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
         "jest": "~27.2.5",
         "jest-puppeteer": "~6.0.3",
         "npm-check-updates": "^12.5.5",
+        "postcss-html": "^1.3.1",
         "puppeteer": "~13.1.3",
         "sass": "~1.42.1",
         "stylelint": "~14.2.0",
