--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
         "password-hash": "~1.2.2",
         "postcss-rtlcss": "~3.4.1",
         "postcss-scss": "~4.0.3",
+        "prismjs": "^1.27.0",
         "prom-client": "~13.2.0",
         "prometheus-api-metrics": "~3.2.1",
         "qrcode": "~1.5.0",
@@ -110,6 +111,7 @@
         "vue-i18n": "~9.1.9",
         "vue-image-crop-upload": "~3.0.3",
         "vue-multiselect": "~3.0.0-alpha.2",
+        "vue-prism-editor": "^2.0.0-alpha.2",
         "vue-qrcode": "~1.0.0",
         "vue-router": "~4.0.14",
         "vue-toastification": "~2.0.0-rc.5",
