--- a/.github/workflows/auto-test.yml
+++ b/.github/workflows/auto-test.yml
@@ -16,17 +16,17 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
-        node-version: [14.x, 16.x, 17.x]
+        node: [14, 16, 17]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - run: git config --global core.autocrlf false  # Mainly for Windows
     - uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ matrix.node }}
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ matrix.node }}
         cache: 'npm'
     - run: npm run install-legacy
     - run: npm run build
