--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "@popperjs/core": "~2.10.2",
         "args-parser": "~1.3.0",
         "axios": "~0.26.1",
+        "axios-cached-dns-resolve": "^3.0.6",
         "bcryptjs": "~2.4.3",
         "bootstrap": "5.1.3",
         "bree": "~7.1.5",
@@ -78,6 +79,7 @@
         "command-exists": "~1.2.9",
         "compare-versions": "~3.6.0",
         "dayjs": "~1.10.8",
+        "esm": "^3.2.25",
         "express": "~4.17.3",
         "express-basic-auth": "~1.2.1",
         "favico.js": "^0.3.10",
