As legacy-peer-deps is specified in .npmrc, `install-legacy` and `update-legacy` are not actually needed.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "node": "14.* || >=16.*"
     },
     "scripts": {
-        "install-legacy": "npm install --legacy-peer-deps",
-        "update-legacy": "npm update --legacy-peer-deps",
+        "install-legacy": "npm install",
+        "update-legacy": "npm update",
         "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
         "lint-fix:js": "eslint --ext \".js,.vue\" --fix --ignore-path .gitignore .",
         "lint:style": "stylelint \"**/*.{vue,css,scss}\" --ignore-path .gitignore",
