--- a/.github/workflows/auto-test.yml
+++ b/.github/workflows/auto-test.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         node-version: ${{ matrix.node }}
         cache: 'npm'
-    - run: npm run install-legacy
+    - run: npm install
     - run: npm run build
     - run: npm test
       env:
@@ -47,5 +47,5 @@ jobs:
       with:
         node-version: 16
         cache: 'npm'
-    - run: npm run install-legacy
+    - run: npm install
     - run: npm run lint
