--- a/.github/workflows/auto-test.yml
+++ b/.github/workflows/auto-test.yml
@@ -43,7 +43,7 @@ jobs:
     - run: git config --global core.autocrlf false  # Mainly for Windows
     - uses: actions/checkout@v3
 
-    - name: Use Node.js LTS
+    - name: Use Node.js 14
       uses: actions/setup-node@v3
       with:
         node-version: 14
