--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "start-server": "node server/server.js",
         "start-server-dev": "cross-env NODE_ENV=development node server/server.js",
         "build": "vite build --config ./config/vite.config.js",
-        "test": "node test/prepare-test-server.js && node server/server.js --port=3002 --data-dir=./data/test/ --test",
+        "test": "ava test/axios-cached-dns-resolve-test.js -timeout=2m && node test/prepare-test-server.js && node server/server.js --port=3002 --data-dir=./data/test/ --test",
         "test-with-build": "npm run build && npm test",
         "jest": "node test/prepare-jest.js && npm run jest-frontend && npm run jest-backend",
         "jest-frontend": "cross-env TEST_FRONTEND=1 jest --config=./config/jest-frontend.config.js",
@@ -133,15 +133,18 @@
         "@vitejs/plugin-vue": "~1.9.4",
         "@vue/compiler-sfc": "~3.2.31",
         "aedes": "^0.46.3",
+        "ava": "^3.15.0",
         "babel-plugin-rewire": "~1.2.0",
         "concurrently": "^7.1.0",
         "core-js": "~3.18.3",
         "cross-env": "~7.0.3",
+        "delay": "^5.0.0",
         "dns2": "~2.0.1",
         "eslint": "~8.14.0",
         "eslint-plugin-vue": "~8.7.1",
         "jest": "~27.2.5",
         "jest-puppeteer": "~6.0.3",
+        "lru-cache": "^7.7.1",
         "npm-check-updates": "^12.5.9",
         "postcss-html": "^1.3.1",
         "puppeteer": "~13.1.3",
