fix formatting issue
Co-authored-by: Adam Stachowicz <saibamenppl@gmail.com>

--- a/.github/workflows/container_build.yml
+++ b/.github/workflows/container_build.yml
@@ -24,8 +24,7 @@ jobs:
       - name: Check Out Repo 
         uses: actions/checkout@v2
 
-      - 
-        name: Docker meta
+      - name: Docker meta
         id: meta
         uses: docker/metadata-action@v3
         with:
