--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
         "limiter": "^2.1.0",
         "mqtt": "^4.2.8",
         "node-cloudflared-tunnel": "~1.0.9",
+        "node-radius-client": "^1.0.0",
         "nodemailer": "~6.6.5",
         "notp": "~2.0.3",
         "password-hash": "~1.2.2",
