added sqlserver monitor

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
         "jwt-decode": "^3.1.2",
         "limiter": "^2.1.0",
         "mqtt": "^4.2.8",
+        "mssql": "^8.1.0",
         "node-cloudflared-tunnel": "~1.0.9",
         "nodemailer": "~6.6.5",
         "notp": "~2.0.3",
