--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "@popperjs/core": "~2.10.2",
         "args-parser": "~1.3.0",
         "axios": "~0.26.1",
+        "axios-ntlm": "^1.3.0",
         "badge-maker": "^3.3.1",
         "bcryptjs": "~2.4.3",
         "bootstrap": "5.1.3",
