--- a/package.json
+++ b/package.json
@@ -69,6 +69,12 @@
         "@grpc/grpc-js": "~1.7.3",
         "@louislam/ping": "~0.4.2-mod.0",
         "@louislam/sqlite3": "15.1.2",
+        "@fortawesome/fontawesome-svg-core": "~1.2.36",
+        "@fortawesome/free-regular-svg-icons": "~5.15.4",
+        "@fortawesome/free-solid-svg-icons": "~5.15.4",
+        "@fortawesome/vue-fontawesome": "~3.0.0-5",
+        "@popperjs/core": "~2.10.2",
+        "@types/whatwg-url": "^8.2.1",
         "args-parser": "~1.3.0",
         "axios": "~0.27.0",
         "axios-ntlm": "1.3.0",
@@ -117,7 +123,22 @@
         "socks-proxy-agent": "6.1.1",
         "tar": "~6.1.11",
         "tcp-ping": "~0.1.1",
-        "thirty-two": "~1.0.2"
+        "thirty-two": "~1.0.2",
+        "timezones-list": "~3.0.1",
+        "v-pagination-3": "~0.1.7",
+        "vue": "next",
+        "vue-chart-3": "3.0.9",
+        "vue-confirm-dialog": "~1.0.2",
+        "vue-contenteditable": "~3.0.4",
+        "vue-i18n": "~9.1.9",
+        "vue-image-crop-upload": "~3.0.3",
+        "vue-multiselect": "~3.0.0-alpha.2",
+        "vue-prism-editor": "^2.0.0-alpha.2",
+        "vue-qrcode": "~1.0.0",
+        "vue-router": "~4.0.14",
+        "vue-toastification": "~2.0.0-rc.5",
+        "vuedraggable": "~4.1.0",
+        "whatwg-url": "^11.0.0"
     },
     "devDependencies": {
         "@actions/github": "~5.0.1",
