--- a/package.json
+++ b/package.json
@@ -130,9 +130,9 @@
         "@babel/eslint-parser": "~7.17.0",
         "@babel/preset-env": "^7.15.8",
         "@types/bootstrap": "~5.1.9",
-        "@vitejs/plugin-legacy": "~1.6.4",
-        "@vitejs/plugin-vue": "~1.9.4",
-        "@vue/compiler-sfc": "~3.2.31",
+        "@vitejs/plugin-legacy": "~1.8.2",
+        "@vitejs/plugin-vue": "~2.3.3",
+        "@vue/compiler-sfc": "~3.2.36",
         "aedes": "^0.46.3",
         "babel-plugin-rewire": "~1.2.0",
         "concurrently": "^7.1.0",
@@ -146,11 +146,12 @@
         "npm-check-updates": "^12.5.9",
         "postcss-html": "^1.3.1",
         "puppeteer": "~13.1.3",
+        "rollup-plugin-visualizer": "^5.6.0",
         "sass": "~1.42.1",
         "stylelint": "~14.7.1",
         "stylelint-config-standard": "~25.0.0",
         "typescript": "~4.4.4",
-        "vite": "~2.6.14",
+        "vite": "~2.9.9",
         "wait-on": "^6.0.1"
     }
 }
