Remove axios-cached-dns-resolve-test

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "start-server": "node server/server.js",
         "start-server-dev": "cross-env NODE_ENV=development node server/server.js",
         "build": "vite build --config ./config/vite.config.js",
-        "test": "ava test/axios-cached-dns-resolve-test.js -timeout=10m && node test/prepare-test-server.js && node server/server.js --port=3002 --data-dir=./data/test/ --test",
+        "test": "node test/prepare-test-server.js && node server/server.js --port=3002 --data-dir=./data/test/ --test",
         "test-with-build": "npm run build && npm test",
         "jest": "node test/prepare-jest.js && npm run jest-frontend && npm run jest-backend",
         "jest-frontend": "cross-env TEST_FRONTEND=1 jest --config=./config/jest-frontend.config.js",
@@ -140,7 +140,6 @@
         "@vitejs/plugin-vue": "~2.3.3",
         "@vue/compiler-sfc": "~3.2.36",
         "aedes": "^0.46.3",
-        "ava": "^3.15.0",
         "babel-plugin-rewire": "~1.2.0",
         "concurrently": "^7.1.0",
         "core-js": "~3.18.3",
