initial code for whois expiry query

--- a/package.json
+++ b/package.json
@@ -130,7 +130,8 @@
         "vue-qrcode": "~1.0.0",
         "vue-router": "~4.0.14",
         "vue-toastification": "~2.0.0-rc.5",
-        "vuedraggable": "~4.1.0"
+        "vuedraggable": "~4.1.0",
+        "whois-light": "^1.1.6"
     },
     "devDependencies": {
         "@actions/github": "~5.0.1",
