--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "bcryptjs": "~2.4.3",
         "bootstrap": "5.1.3",
         "bree": "~7.1.5",
+        "cacheable-lookup": "^6.0.4",
         "chardet": "^1.3.0",
         "chart.js": "~3.6.2",
         "chartjs-adapter-dayjs": "~1.0.0",
