--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
         "badge-maker": "^3.3.1",
         "bcryptjs": "~2.4.3",
         "bree": "~7.1.5",
-        "cacheable-lookup": "^6.0.4",
+        "cacheable-lookup": "~6.0.4",
         "chardet": "^1.3.0",
         "check-password-strength": "^2.0.5",
         "cheerio": "^1.0.0-rc.10",
