--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -45,14 +45,14 @@ RUN rm -rf ./* && chown node /app
 
 USER node
 
-RUN git clone https://github.com/louislam/uptime-kuma.git .
+RUN git clone https://github.com/louislam/uptime-kuma.git \
+RUN gh pr checkout 2023
 RUN npm ci
 
 EXPOSE 3000 3001
 VOLUME ["/app/data"]
 HEALTHCHECK --interval=60s --timeout=30s --start-period=180s --retries=5 CMD node extra/healthcheck.js
-ENTRYPOINT ["/usr/bin/dumb-init", "--", "extra/entrypoint.sh"]
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "start-pr-test"]
 
 
 # Upload the artifact to Github
