--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -45,7 +45,7 @@ RUN rm -rf ./* && chown node /app
 
 USER node
 
-RUN git clone https://github.com/louislam/uptime-kuma.git \
+RUN git clone https://github.com/louislam/uptime-kuma.git
 RUN gh pr checkout 2023
 RUN npm ci
 
