Add support for MySQL/MariaDB databases #1817
This commit adds support for monitoring MySQL and MariaDB database
servers. The mysql2 package was choosen over mysql as it provides a
promise wrapper and is reportedly faster than the original mysql package
whilst still maintaining the same API.

Signed-off-by: Matthew Nickson <mnickson@sidingsmedia.com>

--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
         "limiter": "^2.1.0",
         "mqtt": "^4.2.8",
         "mssql": "^8.1.0",
+        "mysql2": "^2.3.3",
         "node-cloudflared-tunnel": "~1.0.9",
         "node-radius-client": "^1.0.0",
         "nodemailer": "~6.6.5",
