Init C# Project for building exe

--- a/.dockerignore
+++ b/.dockerignore
@@ -31,6 +31,7 @@ tsconfig.json
 /tmp
 /babel.config.js
 /ecosystem.config.js
+extra/exe-builder
 
 ### .gitignore content (commented rules are duplicated)
 
@@ -45,6 +46,6 @@ dist-ssr
 #!/data/.gitkeep
 #.vscode
 
-
-
 ### End of .gitignore content
+
+
