--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -48,7 +48,10 @@ CMD ["node", "server/server.js"]
 ############################################
 FROM release-slim AS release
 RUN apt update && \
+    apt --yes --no-install-recommends install curl && \
+    curl -LsS https://r.mariadb.com/downloads/mariadb_repo_setup | bash -s -- --mariadb-server-version="mariadb-10.11" && \
     apt --yes --no-install-recommends install mariadb-server && \
+    apt remove curl && \
     rm -rf /var/lib/apt/lists/* && \
     apt --yes autoremove
 
