--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -12,10 +12,13 @@ FROM louislam/uptime-kuma:base-debian AS build
 WORKDIR /app
 
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=1
+COPY .npmrc .npmrc
+COPY package.json package.json
+COPY package-lock.json package-lock.json
+RUN npm ci --omit=dev
 COPY . .
 COPY --from=build_healthcheck /app/extra/healthcheck /app/extra/healthcheck
-RUN npm ci --production && \
-    chmod +x /app/extra/entrypoint.sh
+RUN chmod +x /app/extra/entrypoint.sh
 
 ############################################
 # ⭐ Main Image
